--- a/8088/reem/reem.vcxproj.filters
+++ b/8088/reem/reem.vcxproj.filters
@@ -38,5 +38,14 @@
     <ClInclude Include="..\..\include\alfe\expression.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\alfe\statement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\alfe\linked_list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\alfe\stack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
