--- a/8088/cga/cgaart/cgaart.vcxproj
+++ b/8088/cga/cgaart/cgaart.vcxproj
@@ -20,13 +20,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -133,6 +133,7 @@
     <ClInclude Include="..\..\..\include\alfe\scanlines.h" />
     <ClInclude Include="..\..\..\include\alfe\set.h" />
     <ClInclude Include="..\..\..\include\alfe\space.h" />
+    <ClInclude Include="..\..\..\include\alfe\stack.h" />
     <ClInclude Include="..\..\..\include\alfe\statement.h" />
     <ClInclude Include="..\..\..\include\alfe\string.h" />
     <ClInclude Include="..\..\..\include\alfe\string_functions.h" />
