CGA 3D, floppy CLV experiments, start of XTCE interrupt testing

--- a/8088/cga/3d/cpp/threed.vcxproj.filters
+++ b/8088/cga/3d/cpp/threed.vcxproj.filters
@@ -22,4 +22,12 @@
   <ItemGroup>
     <Natvis Include="..\..\..\..\include\alfe.natvis" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\include\alfe\user.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
