--- a/8088/cga/3d/cpp/threed.vcxproj
+++ b/8088/cga/3d/cpp/threed.vcxproj
@@ -148,6 +148,10 @@
   <ItemGroup>
     <Natvis Include="..\..\..\..\include\alfe.natvis" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\include\alfe\main.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\user.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
